feat: store/load the user
