# api/openapi.yaml
@@ -44,6 +44,33 @@ paths:
           description: user not found
       tags:
       - user
+    get:
+      operationId: GetUser
+      requestBody:
+        description: Create a new pet in the store
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+            example:
+              ID: 1
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              example:
+                id: "1"
+                Name: nelson
+              schema:
+                $ref: '#/components/schemas/User'
+          description: "Successful operation, returns user data"
+        "400":
+          description: Invalid request
+      tags:
+      - user
+
+
   /users/{id}:
     get:
       operationId: GetUser
@@ -66,7 +93,6 @@ paths:
           description: "Successful operation, returns user data"
         "400":
           description: Invalid request
-
       tags:
       - user
   /healthz:
